Add responsive CSS for teacher login

--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -216,6 +216,10 @@
         <a href="/admin/rapport-absences-eleves" class="nav-link"><i class="fas fa-chart-line"></i> <span>تقارير غياب الطلاب</span></a>
         <a href="/admin/behavior-reports" class="nav-link"><i class="fas fa-clipboard-list"></i> <span>تقارير السلوك</span></a>
         <a href="/admin/student-reports-list" class="nav-link"><i class="fas fa-file-signature"></i> <span>التقييمات الأكاديمية</span></a>
+        <a href="/admin/stars-management" class="nav-link">
+    <i class="fas fa-trophy" style="color: #f1c40f;"></i> 
+    <span>نجوم التميز</span>
+</a>
         <hr>
         <a href="/admin/settings" class="nav-link"><i class="fas fa-cog"></i> <span>إعدادات النظام</span></a>
     </div>
@@ -241,6 +245,12 @@
             <h3>إدارة المعلمين</h3>
             <p>إضافة المعلمين، التخصصات، وتعديل البيانات</p>
         </div>
+<div class="card" style="border-bottom-color: #f1c40f;" onclick="location.href='/admin/stars-management'">
+    <div class="icon" style="color: #f1c40f;">🏆</div>
+    <h3>نجوم التميز</h3>
+    <p>لوحة الشرف، تحفيز المعلمين، وإدارة نقاط الأداء</p>
+</div>
+
 
         <div class="card students" onclick="location.href='/admin/eleves'">
             <div class="icon">👨‍🎓</div>
